<resources>
    <string name="app_name">Joke Bot</string>
    <string name="joke_text">Tell me a joke</string>
    <string name="please_wait">Please wait...</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="portuguese">Portuguese</string>
    <string name="save">Save</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="settings">Settings</string>
    <string name="voice_command">Voice Command</string>
</resources>