<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".screens.SettingsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/select_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/languages_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radio_btn_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"/>
        <RadioButton
            android:id="@+id/radio_btn_italian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/italian"/>
        <RadioButton
            android:id="@+id/radio_btn_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/french"/>
        <RadioButton
            android:id="@+id/radio_btn_german"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/german"/>
        <RadioButton
            android:id="@+id/radio_btn_japanese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/japanese"/>
    </RadioGroup>

    <Button
        android:id="@+id/save_settings_btn"
        android:background="@drawable/button_background"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:paddingVertical="5dp"
        android:text="@string/save"
        android:onClick="saveSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages_radio_group" />
</androidx.constraintlayout.widget.ConstraintLayout>